# tata_surya

./: CMakeLists.txt  Makefile  README.md  run.sh
include/: BaseWindow.hpp  Operator.hpp
src/: AlertDialog.mm  BaseWindow.mm  Operator.mm  Windowing.mm  main.mm
